<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
<include layout="@layout/toolbar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:id="@+id/edt_reg_name"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/text_reg_name"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:id="@+id/edt_reg_email"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/text_reg_email"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:id="@+id/edt_reg_mobile"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/text_reg_mobile"
        android:inputType="number"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:id="@+id/edt_reg_password"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:hint="@string/text_reg_address"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/white"
        android:id="@+id/btn_reg_submit"
        android:background="@drawable/rc_rectangle"
        android:text="@string/text_reg_submit"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content" />



</LinearLayout>